WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56598
[chromium] Video colors have wrong brightness/contrast
https://bugs.webkit.org/show_bug.cgi?id=56598
Summary
[chromium] Video colors have wrong brightness/contrast
Victoria Kirst
Reported
2011-03-17 14:58:18 PDT
[chromium] Video colors have wrong brightness/contrast
Attachments
Patch
(7.44 KB, patch)
2011-03-17 14:59 PDT
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Patch
(7.41 KB, patch)
2011-03-17 15:01 PDT
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Victoria Kirst
Comment 1
2011-03-17 14:59:29 PDT
Created
attachment 86100
[details]
Patch
WebKit Review Bot
Comment 2
2011-03-17 15:00:33 PDT
Attachment 86100
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:283: y_raw is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:284: u_unsigned is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:285: v_unsigned is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Victoria Kirst
Comment 3
2011-03-17 15:01:19 PDT
Created
attachment 86101
[details]
Patch
WebKit Review Bot
Comment 4
2011-03-17 15:03:26 PDT
Attachment 86101
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:283: y_raw is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:284: u_unsigned is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/platform/graphics/chromium/ShaderChromium.cpp:285: v_unsigned is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Russell
Comment 5
2011-03-17 15:45:31 PDT
Comment on
attachment 86101
[details]
Patch Looks good to me. I'm ignoring the style queue since it's flagging variable names in embedded GLSL shaders which use a different convention.
Vangelis Kokkevis
Comment 6
2011-03-17 16:25:44 PDT
Comment on
attachment 86101
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86101&action=review
> Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:63 > +const float VideoLayerChromium::yuvAdjust[3] = {
Since these values are fixed, why not put them straight in the shader? I guess the same would apply for the conversion matrix too!
Vangelis Kokkevis
Comment 7
2011-03-17 16:27:04 PDT
(In reply to
comment #6
)
> (From update of
attachment 86101
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=86101&action=review
> > > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:63 > > +const float VideoLayerChromium::yuvAdjust[3] = { > > Since these values are fixed, why not put them straight in the shader? I guess the same would apply for the conversion matrix too!
Never mind. Ken reminded me about the comman vs period issue which resulted in these being passed as uniforms...
WebKit Commit Bot
Comment 8
2011-03-17 17:11:11 PDT
Comment on
attachment 86101
[details]
Patch Clearing flags on attachment: 86101 Committed
r81414
: <
http://trac.webkit.org/changeset/81414
>
WebKit Commit Bot
Comment 9
2011-03-17 17:11:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug